--- a/googlemaps.html
+++ b/googlemaps.html
@@ -1,19 +1,73 @@
 <!DOCTYPE html>
-<html>
+<html manifest="nromano.appcache">
 <head>
+    <meta charset="UTF-8">
+    <title>Polylines</title>
+    <link rel="stylesheet" href="base.css"/>
     <style type="text/css">
-        html, body, #map-canvas { height: 100%; margin: 0; padding: 0;}
+
+        html, body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+        }
+
+        section{
+            text-align: center;
+            margin: 10px auto;
+            height: 100%;
+        }
+
+        #map-canvas {
+            height: 50%;
+            width: 100%;
+            padding: 0;
+        }
+
+        #list{
+            width: 600px;
+            height: calc(50% - 120px);
+            overflow: auto;
+            margin: 10px auto;
+        }
+
+        ul{
+            list-style: none;
+            text-align: left;
+        }
+
     </style>
     <script type="text/javascript"
             src="https://maps.googleapis.com/maps/api/js?v=3.exp">
     </script>
     <script type="text/javascript">
 
+        window.addEventListener('load', function(e) {
+
+            var appCache = window.applicationCache;
+
+            appCache.update();
+
+            appCache.addEventListener('updateready', function(e) {
+                console.log('appCache3:',appCache.status);
+                if (appCache.status == 4) {
+                    console.log('an update is available');
+                    if (confirm('A new version of this site is available. Load it?')) {
+                        window.location.reload();
+                    }
+                } else {
+                    console.log('no updates at this time');
+                }
+            }, false);
+
+        }, false);
+
         var myPath = [];
         var watchID;
         var geoLoc = navigator.geolocation;
         var map;
-        var marker;
+        var endMarker;
 
         function loadMyPosition() {
             // get the geolocation
@@ -25,25 +79,26 @@
             });
         }
 
-        function getPosition(){
-            geoLoc.getCurrentPosition(function (position) {
-                watchID = geoLoc.watchPosition(updatePosition);
-            })
-        }
+        watchID = geoLoc.watchPosition(updatePosition);
 
         function updatePosition(position){
-            marker.setMap(null);
+            endMarker.setMap(null);
             var lat = position.coords.latitude;
             var lng = position.coords.longitude;
+
+            console.log(lat,lng);
             var newLatLng = new google.maps.LatLng(lat,lng);
             myPath.push(newLatLng);
 
-            console.log('position',lat,lng);
-            marker = new google.maps.Marker({
-                position: { lat: lat, lng: lng},
-                map: map,
-                title: 'Hello World!'
-            });
+            if(myPath.length > 2){
+                endMarker = new google.maps.Marker({
+                    position: { lat: lat, lng: lng},
+                    map: map,
+                    title: 'Hello World!',
+                    label: 'Z',
+                    animation: google.maps.Animation.BOUNCE
+                });
+            }
 
             var flightPath = new google.maps.Polyline({
                 path: myPath,
@@ -58,23 +113,27 @@
         }
 
         function initialize(lat, lng) {
+            var newLatLng = new google.maps.LatLng(lat,lng);
+            myPath.push(newLatLng);
             var mapOptions = {
                 center: { lat: lat, lng: lng},
                 zoom: 14
             };
             var div = document.getElementById('map-canvas');
-            map = new google.maps.Map( div,
+            map = new google.maps.Map(div,
                     mapOptions);
 
-
-            console.log('map in init',map);
-
-            marker = new google.maps.Marker({
-                map: map,
-                position: new google.maps.LatLng(lat, lng),
-                title:"Hello World!"
+            endMarker = new google.maps.Marker({
             });
-            setInterval(getPosition(map), 5000);
+
+            var startMarker = new google.maps.Marker({
+                map: map,
+                animation: google.maps.Animation.DROP,
+                position: new google.maps.LatLng(lat, lng),
+                title:"Hello World!",
+                label: 'A'
+            });
+
         }
 
         google.maps.event.addDomListener(window, 'load', loadMyPosition);
@@ -86,6 +145,28 @@
     </script>
 </head>
 <body>
-<div id="map-canvas"></div>
+<section>
+    <header>
+        <h1>Position tracer v1.0.3</h1>
+    </header>
+    <div id="map-canvas"></div>
+    <div id="list"><ul>
+        <li>1.0.1 Added position updates using watchPosition</li>
+        <li>1.0.2 Page uses applicationCache to load latest version.</li>
+        <li>1.0.3
+            <ul>
+                <li>Start marker now stays at initial position and end marker marks current position.</li>
+                <li>Start marker drops into place on page load.</li>
+            </ul>
+        </li>
+        <li>1.0.4
+            <ul>
+                <li>Start marker 'A' and end marker 'Z'.</li>
+                <li>'Z' bounces.</li>
+            </ul>
+        </li>
+    </ul>
+    </div>
+</section>
 </body>
 </html>
